@@ -2021,6 +2021,18 @@ operator|.
 name|roundRobinAssignment
 argument_list|(
 name|regions
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|HRegionInfo
+index|[
+name|regions
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
 argument_list|,
 name|servers
 argument_list|)
